adding a new script tage in preparation for github deployment

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.3.0",
     "next-seo": "^5.15.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "export": "next export"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
