--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "next": "12.3.0",
     "next-seo": "^5.15.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
