--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      NEXT_PUBLIC_BASE_PATH: /next-portfolio/
+      NEXT_PUBLIC_BASE_PATH: /next-portfolio
 
     steps:
       - name: Checkout 🛎️
