--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.14",
     "caniuse-lite": "1.0.30001393",
+    "glob": "^9.2.1",
     "next": "12.3.0",
     "next-seo": "^5.15.0",
     "react": "18.2.0",
