--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
               run: npm i
 
             - name: Build my App
-              run: npm run build && npm run export && touch ./out/.nojekyll
+              run: turbo build
 
             - name: Deploy 🚀
               uses: JamesIves/github-pages-deploy-action@v4.4.1
