--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -13,23 +13,27 @@
     "@heroicons/react": "^2.0.14",
     "@tabler/icons-react": "^3.24.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.13.1",
+    "framer-motion": "^12.0.0-alpha.0",
     "glob": "^9.2.1",
-    "next": "^14.2.12",
+    "next": "15.0.4",
     "next-seo": "^5.15.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
-    "@types/react": "18.0.19",
-    "@types/react-dom": "18.0.6",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.1",
     "autoprefixer": "^10.4.13",
     "eslint": "8.23.0",
-    "eslint-config-next": "^14.0.1",
+    "eslint-config-next": "15.0.4",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "typescript": "4.8.3"
+  },
+  "overrides": {
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.1"
   }
 }
