--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.1",
     "autoprefixer": "^10.4.13",
-    "eslint": "8.23.0",
+    "eslint": "^8.23.0",
     "eslint-config-next": "15.0.4",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.8.3"
+    "typescript": "^4.8.3"
   },
   "overrides": {
     "@types/react": "19.0.1",
