--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "export": "next export"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.0.14",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@tabler/icons-react": "^3.24.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.0-alpha.0",
     "glob": "^9.2.1",
+    "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "next-seo": "^5.15.0",
     "react": "19.0.0",
